# tracker

./: .gitignore  Cargo.toml  LICENSE  MIGRATION.md  README.md  install.sh  settings.gradle.kts  update
rust-tracker/: Cargo.toml  test.sh
rust-tracker/src/: document.rs  main.rs  report.rs  testutils.rs  tracker.rs
shell/: tracker-function.zsh
src/: config.rs  constants.rs  document.rs  lib.rs  main.rs  paths.rs  report.rs  testutils.rs  tracker.rs
src/document/: tests.rs
src/report/: report_tests.rs
src/tracker/: tests.rs
tests/: it.rs
tests/data/: 2024-W04.txt
tracker/: build.gradle.kts
tracker/src/main/kotlin/tech/skagedal/tracker/: App.kt  FileSystemHelpers.kt  LoggingConfigurator.kt  ProcessEnvironment.kt
tracker/src/main/kotlin/tech/skagedal/tracker/commands/: TrackEditCommand.kt  TrackReportCommand.kt  TrackStartCommand.kt  TrackStopCommand.kt  TrackerCommand.kt
tracker/src/main/kotlin/tech/skagedal/tracker/tracker/: Serializer.kt  TimeTracker.kt  TrackerRepository.kt  WeekReport.kt
tracker/src/main/kotlin/tech/skagedal/tracker/util/: FunctionExtensions.kt  ListExtensions.kt  ProcessExitedUnsuccessfullyException.kt  ProcessRunner.kt  RegexExtensions.kt
tracker/src/test/kotlin/tech/skagedal/tracker/commands/: TrackReportCommandTest.kt
tracker/src/test/kotlin/tech/skagedal/tracker/tracker/: SerializerTest.kt  TimeTrackerTest.kt  TrackerRepositoryTest.kt
tracker/src/test/kotlin/tech/skagedal/tracker/util/: ListExtensionsTest.kt
